# library

./: book.json  library.json  main.py  pyproject.toml
scraping/: __init__.py  scraper.py
